-----------------------------------------------------------------------
*** ecasound - changes and additions to libecasound interface       ***
-----------------------------------------------------------------------

2000-02-23  Kai Vehmanen <kaiv@wakkanet.fi>

	* audiofx_filter.h (various): class EFFECT_ALLPASS_FILTER added
	* audiofx_filter.h (various): class EFFECT_COMB_FILTER added
	* samplebuffer.h (various): made sample_rate a normal class
	member instead of a static member -> affect many other classes
	* eca-chainop.h (output_samples): added
	* eca-chainop.h (class): now inherits ECA_AUDIO_FORMAT
	* eca-chainsetup.h (is_enabled): added const member modifier
	* audiofx_timebased.h (various): class DELAY interface has
	changed
		
2000-02-22  Kai Vehmanen <kaiv@wakkanet.fi>

	* eca-audio-objects.h (interpret_audioio_device): second parameter
	omitted
	
2000-02-21  Kai Vehmanen <kaiv@wakkanet.fi>

	* eca-chainsetup.h: ECA_RESOURCES removed from constructor
	parameters
	* eca-chain.h (init): more arguments
	
2000-02-20  Kai Vehmanen <kaiv@wakkanet.fi>

	* preset.h: added
	* file-preset.h: added
	* global-preset.h: added
	* eca-preset-map.h: added
	
2000-02-18  Kai Vehmanen <kaiv@wakkanet.fi>

	* eca-chainsetup.h (create_chain_operator, create_controller): added
	* eca-chain.h (constructor): moved sample buffer objects outside,
	now chain's just have a pointer to a buffer
	
2000-02-15  Kai Vehmanen <kaiv@wakkanet.fi>

	* resource-file.h (keywords): added
	
2000-02-14  Kai Vehmanen <kaiv@wakkanet.fi>

	* audioio-ewf.h (various): new functionality
	* resource-file.h (load, save, is_modified, set_modified_state): removed
	* resource-file.h (set_resource_file, get_resource_file): renamed
	* eca-controller-base.h (resource_value): return value changed
	
2000-02-13  Kai Vehmanen <kaiv@wakkanet.fi>

	* audioio.h (various): added support for class ECA_AUDIO_TIME
	
2000-02-11  Kai Vehmanen <kaiv@wakkanet.fi>
        