@@ -57,18 +57,21 @@ const char* ecasound_parameter_help_rep =
 "     -erc:source,target       copy channel 'source' to 'target' \n"
 "     -erm:target              mix all channels to channel 'target' \n"
 "     -epp:l_r_balance         normal pan (0 = left, 100 = right) \n"
+"     -etc:delay_time,         chorus\n"
+"          feedback_%,\n"
+"          lfo_freq\n"
 "     -etd:delay_time,mode,    delay (mode: 0 = normal,  \n"
 "          number_of_delays    1 = surround, 2 = stereo-spread) \n"
-"          mix_%%               \n"
+"          mix_%               \n"
 "     -etm:delay_time,         multitap delay\n"
 "          number_of_delays    \n"
-"          mix_%%              \n"
+"          mix_%               \n"
 "     -etf:delay_time          fake stereo (delay 1-40ms) \n"
 "     -etl:delay_time,         flanger\n"
-"          feedback_%%,\n"
+"          feedback_%,\n"
 "          lfo_freq\n"
 "     -etr:reverb_time,mode,   reverb (mode: 0 = normal,  \n"
-"         feedback_%%          1 = surround) \n"
+"         feedback_%           1 = surround) \n"
 "     -ev                      analyze/maximize volume (non-realtime) \n"
 "     -ezf                     find optimal value for DC-fix \n"
 "     -ezx:left,right          adjust DC \n"
